--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -144,6 +144,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "frontend"
+    }
+  },
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": false
+  }
 }
