--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "angular2-flash-messages": "^3.0.1",
     "ng2-messages": "^0.1.4",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
